# advanced_python

./: .gitignore  CLAUDE.md  LICENSE  README.md  conf.py  hall_of_fame.rst  index.rst  introspection.rst  links.md  links.rst  make.bat  namespace_exercise.md  pip.rst  project.rst  pyproject.toml  requirements.txt  structure_classes_modules.md
_static/: academis.css  custom.css
challenges/: backpack_problem.md  backpack_problem.rst  binary_search.md  binary_search.py  binary_search.rst  blockchain.md  blockchain.rst  chained_list.md  chained_list.py  chained_list.rst  demographics.rst  factorial.rst  josephus.md  josephus.rst  magic_square.md  magic_square.rst  maze.md  maze.rst  metaclass.md  metaclass.rst  population.json  sorting.md  sorting.rst  tennis.md  tennis.rst  tree_traversal.md  tree_traversal.rst  tsp.md  tsp.rst
classes/: abc.md  abc.rst  abstract_class.py  account.py  class_dataclass.py  class_diagram.md  class_properties.md  class_pydantic.py  class_typedict.py  class_vanilla.py  classes.md  classes.rst  composition.md  composition.rst  decorator_class.md  decorator_class.py  decorator_class.rst  descriptors.py  getattr_setattr.py  inheritance.md  inheritance.rst  iterable_class.py  metaclass_decorator.py  metaclasses.md  metaclasses.py  metaclasses.rst  multiple_inheritance.py  oop_principles.md  oop_task.md  operator_overloading.md  operator_overloading.rst  planet.py  properties.rst  property_buggy.py  slots.py  sort_elephants.py  sortable_objects.py  tree_traversal.py  vector.py
concurrency/: README.md  README.rst  async_factorial.py  async_fibonacci.py  coroutine_asyncio.py  factorial.py  fibonacci.py  gauss_elim.py  multithreading.py  subprocess_factorial.py  subprocess_fibonacci.py  test_gauss_elim.py  thread_factorial.py  thread_fibonacci.py
debugging/: README.rst  space_game.py
design_patterns/: README.rst  adapter.rst  app_security.py  decorator.rst  facade.rst  factory.rst  iterator.rst  more.rst  observer.rst  project_structure.rst  pyproject.toml  repository.rst  singleton.rst  strategy.rst  web.rst
error_handling/: debugging.rst  exceptions.rst  generate_maze_buggy.py  get_traceback.py  interactive_debugger.rst  loggers.py  logging.rst  logging_example.py  warnings.md  warnings.rst
examples/: breakout.py  breakout.rst  snake.py  tetris.py  tetris.rst
exercises/: comprehension_exercise.py  exercise_logging.py
functions/: README.md  decorators.md  decorators.rst  exercises.md  function_parameters.md  function_parameters.rst  functools.md  functools.rst  generators.md  generators.rst  good_function_style.rst  lambda_functions.md  lambda_functions.rst  levels.rst  refactor_tetris.rst  scope.md  scope.rst  ticker.py
getting_started/: git_repo.rst  prototype.rst  prototype_curses.py  prototype_opencv.py  structure.rst  virtualenv.rst
performance/: mandelbrot.py  profiling.rst
python_package/: README.md  README.rst  __main__.py  pac_game.py  pyproject.toml  refcount.py
quality/: code_checks.rst  continuous_integration.rst  packaging.rst  type_annotations.py
refactoring/: README.md  space_game.py
shortcuts/: collections.rst  comprehensions.md  comprehensions.rst  enums.md  enums.rst  namedtuple.md  namedtuple.rst
software_engineering/: README.rst  code_review.rst  prototype.rst  prototype_opencv.py  versioning.md
structure/: commandline_args.md  commandline_args.rst  main_block.md  main_block.rst  modules.rst  namespaces.rst  use_package.py
testing/: README.rst  facade.rst  mock_example.py  test_pac.py  test_pi.py  test_words.py  (+1 more)
(+55 files in other folders)
